--- a/help-centre/index.mdx
+++ b/help-centre/index.mdx
@@ -2,6 +2,7 @@
 title: "Overview"
 description: "Browse our comprehensive help articles and guides"
 mode: "wide"
+isPublic: true
 ---
 
 ## Getting Started
