--- a/image-test.mdx
+++ b/image-test.mdx
@@ -46,7 +46,7 @@ export const ImageWrapper = ({ src, alt, caption }) => (
 );
 
 <ImageWrapper 
-  src="/assets/pig2.jpeg" 
+  src="/assets/pig2.jpg" 
   alt="Pig 2" 
   caption="A lovely pig wrapped in a gradient border" 
 />
@@ -58,7 +58,7 @@ This image uses a React component imported from a separate file:
 import { FancyImage } from '/snippets/FancyImage.mdx';
 
 <FancyImage 
-  src="/assets/pig3.jpeg" 
+  src="/assets/pig3.jpg" 
   alt="Pig 3" 
   title="Fancy Pig Gallery"
 />
